// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component does not render when all content arrays are empty 1`] = `
<div>
  


</div>
`;

exports[`Table Component renders with optional attributes 1`] = `
<div>
  

  
  <table
    class="ct-table ct-theme-dark ct-table--caption-after ct-table--striped custom-class"
    data-test="true"
  >
    
          
    <caption>
      Sample Table Caption
    </caption>
    
    
          
    <thead>
      
        
      <tr>
        
                      
        <th
          scope="col"
        >
          Header 1
        </th>
        
                      
        <th
          scope="col"
        >
          Header 2
        </th>
        
                  
      </tr>
      
      
    </thead>
    
    
          
    <tbody>
      
              
      <tr>
        
                      
        <td
          data-title="Header 1"
        >
          
              Row 1, Col 1
            
        </td>
        
                      
        <td
          data-title="Header 2"
        >
          
              Row 1, Col 2
            
        </td>
        
                  
      </tr>
      
              
      <tr>
        
                      
        <td
          data-title="Header 1"
        >
          
              Row 2, Col 1
            
        </td>
        
                      
        <td
          data-title="Header 2"
        >
          
              Row 2, Col 2
            
        </td>
        
                  
      </tr>
      
            
    </tbody>
    
    
          
    <tfoot>
      
        
      <tr>
        
                      
        <th
          scope="col"
        >
          Footer 1
        </th>
        
                      
        <th
          scope="col"
        >
          Footer 2
        </th>
        
                  
      </tr>
      
      
    </tfoot>
    
      
  </table>
  

</div>
`;

exports[`Table Component renders with required attributes 1`] = `
<div>
  

  
  <table
    class="ct-table ct-theme-light ct-table--caption-before  "
  >
    
    
    
          
    <tbody>
      
              
      <tr>
        
                      
        <td>
          
              Row 1, Col 1
            
        </td>
        
                      
        <td>
          
              Row 1, Col 2
            
        </td>
        
                  
      </tr>
      
              
      <tr>
        
                      
        <td>
          
              Row 2, Col 1
            
        </td>
        
                      
        <td>
          
              Row 2, Col 2
            
        </td>
        
                  
      </tr>
      
            
    </tbody>
    
    
      
  </table>
  

</div>
`;
